syntax = "proto3";

package upload;
option go_package = "pkg/upload";

service UploadService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {}
}

message UploadFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk = 2;
  }
}

message FileInfo {
  string filename = 1;
  string content_type = 2;
}

message UploadFileResponse {
  string file_url = 1;
} 